--- a/.config/compton.conf
+++ b/.config/compton.conf
@@ -1,6 +1,6 @@
 # Shadow
 shadow = true;                        # Enabled client-side shadows on windows.
-no-dock-shadow = true;                # Avoid drawing shadows on dock/panel windows.
+no-dock-shadow = false;                # Avoid drawing shadows on dock/panel windows.
 no-dnd-shadow = true;                 # Don't draw shadows on DND windows.
 clear-shadow = true;                  # Zero the part of the shadow's mask behind the 
                                       # window. Fix some weirdness with ARGB windows.
@@ -12,10 +12,10 @@ shadow-exclude-reg = "x25+0-0";       # Area not to draw shadows onto
 # shadow-red = 0.0;                   # Red color value of shadow. (0.0 - 1.0, defaults to 0)
 # shadow-green = 0.0;                 # Green color value of shadow. (0.0 - 1.0, defaults to 0)
 # shadow-blue = 0.0;                  # Blue color value of shadow. (0.0 - 1.0, defaults to 0)
-shadow-exclude = [ "name = 'slop'",
-                   "name = 'chromium'",
-                   "name = 'Dunst'",
-                   "name = 'bar'" ];
+#shadow-exclude = [ "name = 'slop'",
+#                   "name = 'chromium'",
+#                   "name = 'Dunst'",
+#                   "name = 'bar'" ];
 shadow-ignore-shaped = true;          # Avoid drawing shadow on all shaped windows
                                       # (see also: --detect-rounded-corners)
 
