--- a/.config/i3/config
+++ b/.config/i3/config
@@ -101,6 +101,20 @@ bindsym $mod+a focus parent
 # focus the child container
 #bindsym $mod+d focus child
 
+set $ws1 web
+set $ws2 2
+set $ws3 3
+set $ws4 4
+set $ws5 5
+set $ws6 6
+set $ws7 7
+set $ws8 8
+set $ws9 9
+set $ws10 10
+
+# focus on click
+focus_follows_mouse no
+
 # switch to workspace
 bindsym $mod+1 workspace 1
 bindsym $mod+2 workspace 2
@@ -158,11 +172,12 @@ mode "resize" {
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
-bar {
-    status_command i3status
-    position top
-    colors {
-        background #B41d1f21
-    }
-}
+#bar {
+#    status_command i3status
+#    position top
+#    colors {
+#        background #B41d1f21
+#    }
+#}
+for_window [class="jetbrains-phpstorm"] move container to workspace 1
 exec ~/.config/i3/i3-startup.sh
